# Rx-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark_report.md  benchmark_report_v2.md  rustfmt.toml
analysis/: README.md  polars_operators_comparison.md  spark_rdd_operators_comparison.md
dev-tools/: Dockerfile.maturin  README.md  create_dockerfile.py  test_dispatch_debug.py  test_dispatch_debug2.py
dev-tools/benchmarks/: benchmark.py  benchmark_v2.py
docs/: README.md
docs/guides/: keyboard_mouse_guide.md  main_guide.md
examples/: README.md  basic_usage.py  keyboard_example.py  mouse_example.py
rx-rust/: Cargo.toml  README.md
rx-rust-py/: Cargo.toml  LICENSE  pyproject.toml
rx-rust-py/python/: README.md  pyproject.toml  test_rx_rust.py
rx-rust-py/python/rx_rust/: __init__.py  clipboard.py  file_watcher.py  folder_watcher.py  keyboard_mouse.py  keyboard_mouse.pyi
rx-rust-py/src/: file_watcher.rs  folder_watcher.rs  lib.rs
rx-rust-py/src/clipboard/: backends.rs  dispatcher.rs  io.rs  mod.rs  observer.rs  subject.rs  toplevel.rs  types.rs
rx-rust-py/src/keyboard_mouse/: backends.rs  dispatcher.rs  io.rs  mod.rs  observer.rs  subject.rs  toplevel.rs  types.rs
rx-rust/src/: lib.rs
rx-rust/src/observable/: base.rs  mod.rs  observable.rs
rx-rust/src/observer/: mod.rs  observer.rs
rx-rust/src/operators/: mod.rs
rx-rust/src/scheduler/: mod.rs
rx-rust/src/subject/: mod.rs
rx-rust/src/subscription/: disposable.rs  mod.rs
rx-rust/tests/: lib.rs
rx-rust/tests/integration/observable/: mod.rs
rx-rust/tests/integration/subscription/: mod.rs
rxpy/: Cargo.toml  README.md  pyproject.toml
rxpy/python/rxpy/: __init__.py
rxpy/src/: lib.rs
test_from_pypi/: test_all.py  test_edge_cases.py
tests/: README.md  _verify_operators.py  test_clipboard.py  test_core.py  test_dispatch_debug3.py  test_dispatch_debug4.py  test_file_watcher.py  test_keyboard_mouse.py  test_monitor_operators.py  test_rx_rust.py
tests/from_pypi/: test_all.py  test_edge_cases.py  test_new_operators.py
