[package]
name = "rx-rust-py"
version = "0.1.0"
edition = "2021"
description = "Reactive Extensions for Python, powered by Rust (PyO3). A high-performance reactive programming library with Observable/Observer/Subject/Scheduler support."
license = "MIT"
homepage = "https://gitcode.com/VictorTop/Rx-Rust"
repository = "https://gitcode.com/VictorTop/Rx-Rust.git"
documentation = "https://gitcode.com/VictorTop/Rx-Rust/blob/main/GUIDE.md"
keywords = ["reactive", "rx", "rx-rust", "observable", "streams", "async", "pyo3", "rust"]
categories = ["asynchronous", "concurrency", "data-structures"]
authors = ["Victor"]

[workspace]

[lib]
name = "rx_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
md5 = "0.7"
once_cell = "1"
chrono = "0.4"
notify = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
