[package]
name = "rx_rust"
version = "0.1.0"
edition = "2021"
authors = ["Rx-Rust Team"]
description = "A Rust-idiomatic reactive programming library"
license = "MIT"
repository = "https://gitcode.com/VictorTop/Rx-Rust"
homepage = "https://gitcode.com/VictorTop/Rx-Rust"
readme = "README.md"
keywords = ["reactive", "rx", "observable", "stream", "async"]
categories = ["asynchronous", "concurrency", "data-structures"]

[lib]
name = "rx_rust"
path = "src/lib.rs"

[features]
tokio = ["dep:tokio"]

[dependencies.tokio]
version = "1"
optional = true
features = ["rt", "rt-multi-thread", "time", "sync", "macros"]

[dev-dependencies]
