[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rx-rust"
version = "0.1.0"
description = "Rx-Rust — Reactive Extensions for Python. A high-performance reactive programming library with Observable/Observer/Subject/Scheduler support. (Pure-Python implementation: no Rust toolchain required to install.)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Victor", email = "victor@rx-rust.dev" },
]
keywords = [
    "reactive", "rx", "observable", "streams", "async",
    "event-driven", "functional-programming", "publisher-subscriber",
    "subject", "scheduler", "rx-rust", "rxpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://gitcode.com/VictorTop/Rx-Rust"
Repository = "https://gitcode.com/VictorTop/Rx-Rust.git"
Issues = "https://gitcode.com/VictorTop/Rx-Rust/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rx_rust*"]
